second time push

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>text in my second website in github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Second Website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo labore excepturi est nulla, ea sint consequuntur voluptatibus expedita repellendus in tempora illo. Nihil et nulla quisquam incidunt eligendi cumque id ea unde inventore illum repellat, earum repudiandae doloribus perspiciatis sit delectus odio velit repellendus neque at sunt libero a amet corrupti. Nulla laboriosam minus possimus praesentium pariatur, facilis eius! Fugiat vel maiores minus provident tempore magnam id veniam vero consequatur, qui voluptate illum ratione a molestias nisi nemo, optio quis obcaecati natus, sed nulla eveniet vitae? Veritatis iusto ullam vel impedit officia deserunt, accusamus inventore sint, culpa adipisci suscipit sapiente.</p>
 </body>
 </html>
